get rid of footer

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ You have two options:
      
 
 &lt;/main&gt;
-&lt;&lt;include &quot;footer&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="6" name="end" tags="" position="97,615" size="100,100">&lt;main&gt;
+</tw-passagedata><tw-passagedata pid="6" name="end" tags="" position="97,615" size="100,100">&lt;main&gt;
 
 End
 
